--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
-    // when the page is loaded, it will redirect to google.com
+    // when the page is loaded, it will redirect to asspixel store
     window.onload() = function() {
-        window.location.href = "https://www.google.com";
+        window.location.href = "https://asspixel.tebex.io/";
     }
 </script>
