--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<script>
-    // when the page is loaded, it will redirect to asspixel store
-    window.onload() = function() {
-        window.location.href = "https://asspixel.tebex.io/";
-    }
-</script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Redirecting to Store</title>
+    <meta http-equiv="refresh" content="0; URL=https://asspixel.tebex.io/">
+  </head>
+
+  <link rel="canonical" href="https://asspixel.tebex.io/">
+</html>
